shop page slider photos height bug on mobile

--- a/resources/styles/layouts/photos-carousel.scss
+++ b/resources/styles/layouts/photos-carousel.scss
@@ -77,7 +77,7 @@
 		}
 
 		img {
-			height: 100vh;
+			max-height: 100vh;
 			margin: auto;
 		}
 	}
